[package]
name = "ametrine-backend"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = "0.5"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "uuid"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
thiserror = "2.0"
anyhow = "1.0"
config = "0.15.19"
hickory-resolver = { version = "0.25", features = ["tokio"] }
sha2 = "0.10.8"
hex = "0.4.3"
pgp = "0.19"
